@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="swfvc"
+	Name="gameswf"
 	ProjectGUID="{EB28DB11-E5F4-4A55-B792-F82257ED0466}"
 	RootNamespace="swfvc"
 	>
