@@ -31,7 +31,7 @@ struct net_interface
 	// Returns NULL if no incoming connection is pending.
 	virtual net_socket* accept() = 0;
 
-	// returns opened socket
+	// create new net_socket
 	virtual net_socket* create_socket() = 0;
 };
 
@@ -84,7 +84,7 @@ struct net_socket
 // Factories for some concrete net_interfaces.
 
 // TCP interface.
-net_interface* tu_create_net_interface_tcp(const char* url, int port_number);
+net_interface* tu_create_net_interface_tcp(const char* host, int port_number);
 
 // Handy for testing.
 //
