@@ -1,3 +1,15 @@
+2007-04-01  Vitaly Alexeev <tishka92@yahoo.com>
+
+	The implementation of tu_file that support HTTP is finished
+	* gameswf/gameswf_impl.cpp: use_cache_files = false (because of net files)
+	* net/http_client.*,
+	* net/net_inetrface_tcp.cpp,
+	* net/net_interface.h:
+	implementation of tu_file that support HTTP is done
+	* net/test_client.cpp: added HTTP file gruber
+	* net/win32/VC8/test_client.vcproj: added VC8 project file
+	that grub HTTP files
+
 2007-03-29  Vitaly Alexeev <tishka92@yahoo.com>
 
 	The beginning of works on HTTP implementation of tu_file()
